parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALL
    ANALYZE
    AT
    BREAK
    CATCH
    CONST
    CONTINUE
    COPY
    DEFER
    DELETE
    EXPORT
    FINALLY
    LBRACKET
    MACRO
    MOVE
    OPERATOR
    OVERRIDE
    PRIV
    PUB
    RANGE_INCLUSIVE
    RBRACKET
    REFERENCE
    STATIC
    STRUCT
    TRY
    UNSAFE
    VAR

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> function_definition
Rule 4     statement -> class_definition
Rule 5     statement -> struct_definition
Rule 6     statement -> enum_definition
Rule 7     statement -> namespace_definition
Rule 8     statement -> variable_declaration SEMI
Rule 9     statement -> interface_definition
Rule 10    statement -> return_statement SEMI
Rule 11    expression -> TRUE
Rule 12    expression -> FALSE
Rule 13    namespace_definition -> NAMESPACE ID LBRACE program RBRACE
Rule 14    namespace_definition -> NAMESPACE ID LBRACE RBRACE
Rule 15    return_statement -> RETURN expression
Rule 16    block -> LBRACE program RBRACE
Rule 17    type_with_generics -> ID LANGLE type_list RANGLE
Rule 18    type_with_generics -> ID empty
Rule 19    type_list -> type_list COMMA type_specifier
Rule 20    type_list -> type_specifier
Rule 21    class_body -> class_body class_member
Rule 22    class_body -> empty
Rule 23    class_member -> variable_declaration SEMI
Rule 24    class_member -> function_definition
Rule 25    struct_body -> struct_body struct_member
Rule 26    struct_body -> empty
Rule 27    struct_member -> variable_declaration SEMI
Rule 28    struct_member -> function_definition
Rule 29    enum_body -> enum_body enum_member
Rule 30    enum_body -> enum_member
Rule 31    enum_member -> ID
Rule 32    enum_member -> ID ASSIGN NUMBER
Rule 33    extends_opt -> EXTENDS type_with_generics
Rule 34    extends_opt -> empty
Rule 35    type_specifier -> ID
Rule 36    type_specifier -> type_with_generics
Rule 37    type_specifier -> POINTER type_specifier
Rule 38    type_specifier -> REF type_specifier
Rule 39    expression -> expression AND expression
Rule 40    expression -> expression OR expression
Rule 41    expression -> expression EQ expression
Rule 42    expression -> expression NEQ expression
Rule 43    expression -> expression LTHEN expression
Rule 44    expression -> expression RTHEN expression
Rule 45    expression -> expression LEQ expression
Rule 46    expression -> expression GEQ expression
Rule 47    expression -> NOT expression
Rule 48    statement -> FOR ID IN expression RANGE expression LBRACE program RBRACE
Rule 49    expression -> expression PLUS expression
Rule 50    expression -> expression MINUS expression
Rule 51    expression -> expression TIMES expression
Rule 52    expression -> expression DIVIDE expression
Rule 53    expression -> expression MOD expression
Rule 54    expression -> LPAREN expression RPAREN
Rule 55    expression -> ID LPAREN arg_list_opt RPAREN
Rule 56    arg_list_opt -> arg_list
Rule 57    arg_list_opt -> empty
Rule 58    arg_list -> arg_list COMMA expression
Rule 59    arg_list -> expression
Rule 60    arg_list -> empty
Rule 61    statement -> IF LPAREN expression RPAREN LBRACE program RBRACE
Rule 62    statement -> IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
Rule 63    statement -> MATCH LPAREN expression RPAREN LBRACE match_cases RBRACE
Rule 64    match_cases -> match_cases match_case
Rule 65    match_cases -> match_case
Rule 66    match_case -> pattern ARM program SEMI
Rule 67    pattern -> simple_pattern
Rule 68    pattern -> tuple_pattern
Rule 69    simple_pattern -> ID
Rule 70    simple_pattern -> NUMBER
Rule 71    simple_pattern -> STRING
Rule 72    simple_pattern -> UNDERSCORE
Rule 73    tuple_pattern -> LPAREN pattern_list RPAREN
Rule 74    pattern_list -> pattern_list COMMA pattern
Rule 75    pattern_list -> pattern
Rule 76    qualified_name -> qualified_name DOUBLE_COLON ID
Rule 77    qualified_name -> ID
Rule 78    use_statement -> USE qualified_name SEMI
Rule 79    function_definition -> ASYNC FN ID LPAREN parameters_opt RPAREN return_type_opt LBRACE program RBRACE
Rule 80    expression -> AWAIT expression
Rule 81    statement -> WHILE LPAREN expression RPAREN LBRACE program RBRACE
Rule 82    empty -> <empty>
Rule 83    expression -> NUMBER
Rule 84    expression -> ID
Rule 85    expression -> REF ID
Rule 86    expression -> POINTER expression
Rule 87    parameters_opt -> parameters_list
Rule 88    parameters_opt -> empty
Rule 89    parameters_list -> parameters_list COMMA parameter
Rule 90    parameters_list -> parameter
Rule 91    parameter -> type_specifier ID
Rule 92    return_type_opt -> ARROW type_specifier
Rule 93    return_type_opt -> empty
Rule 94    function_definition -> FN type_with_generics LPAREN parameters_opt RPAREN return_type_opt LBRACE program RBRACE
Rule 95    function_definition -> FN type_with_generics LPAREN parameters_opt RPAREN return_type_opt LBRACE RBRACE
Rule 96    class_definition -> CLASS type_with_generics extends_opt LBRACE class_body RBRACE
Rule 97    statement -> variable_declaration
Rule 98    statement -> ID ASSIGN expression
Rule 99    statement -> expression
Rule 100   expression -> error
Rule 101   variable_declaration -> type_specifier ID LPAREN arg_list_opt RPAREN SEMI
Rule 102   variable_declaration -> type_specifier ID SEMI
Rule 103   variable_declaration -> type_specifier ID ASSIGN expression SEMI
Rule 104   variable_declaration -> type_specifier ID LBRACE arg_list_opt RBRACE SEMI
Rule 105   variable_declaration -> type_specifier ID ASSIGN NEW type_specifier LPAREN arg_list_opt RPAREN SEMI
Rule 106   interface_definition -> INTERFACE type_with_generics LBRACE interface_body RBRACE
Rule 107   interface_body -> interface_body function_definition
Rule 108   interface_body -> empty
Rule 109   struct_definition -> CLASS type_with_generics extends_opt LBRACE struct_body RBRACE
Rule 110   enum_definition -> ENUM type_with_generics LBRACE enum_body RBRACE

Terminals, with rules where they appear

ALL                  : 
ANALYZE              : 
AND                  : 39
ARM                  : 66
ARROW                : 92
ASSIGN               : 32 98 103 105
ASYNC                : 79
AT                   : 
AWAIT                : 80
BREAK                : 
CATCH                : 
CLASS                : 96 109
COMMA                : 19 58 74 89
CONST                : 
CONTINUE             : 
COPY                 : 
DEFER                : 
DELETE               : 
DIVIDE               : 52
DOUBLE_COLON         : 76
ELSE                 : 62
ENUM                 : 110
EQ                   : 41
EXPORT               : 
EXTENDS              : 33
FALSE                : 12
FINALLY              : 
FN                   : 79 94 95
FOR                  : 48
GEQ                  : 46
ID                   : 13 14 17 18 31 32 35 48 55 69 76 77 79 84 85 91 98 101 102 103 104 105
IF                   : 61 62
IN                   : 48
INTERFACE            : 106
LANGLE               : 17
LBRACE               : 13 14 16 48 61 62 62 63 79 81 94 95 96 104 106 109 110
LBRACKET             : 
LEQ                  : 45
LPAREN               : 54 55 61 62 63 73 79 81 94 95 101 105
LTHEN                : 43
MACRO                : 
MATCH                : 63
MINUS                : 50
MOD                  : 53
MOVE                 : 
NAMESPACE            : 13 14
NEQ                  : 42
NEW                  : 105
NOT                  : 47
NUMBER               : 32 70 83
OPERATOR             : 
OR                   : 40
OVERRIDE             : 
PLUS                 : 49
POINTER              : 37 86
PRIV                 : 
PUB                  : 
RANGE                : 48
RANGE_INCLUSIVE      : 
RANGLE               : 17
RBRACE               : 13 14 16 48 61 62 62 63 79 81 94 95 96 104 106 109 110
RBRACKET             : 
REF                  : 38 85
REFERENCE            : 
RETURN               : 15
RPAREN               : 54 55 61 62 63 73 79 81 94 95 101 105
RTHEN                : 44
SEMI                 : 8 10 23 27 66 78 101 102 103 104 105
STATIC               : 
STRING               : 71
STRUCT               : 
TIMES                : 51
TRUE                 : 11
TRY                  : 
UNDERSCORE           : 72
UNSAFE               : 
USE                  : 78
VAR                  : 
WHILE                : 81
error                : 100

Nonterminals, with rules where they appear

arg_list             : 56 58
arg_list_opt         : 55 101 104 105
block                : 
class_body           : 21 96
class_definition     : 4
class_member         : 21
empty                : 18 22 26 34 57 60 88 93 108
enum_body            : 29 110
enum_definition      : 6
enum_member          : 29 30
expression           : 15 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 48 48 49 49 50 50 51 51 52 52 53 53 54 58 59 61 62 63 80 81 86 98 99 103
extends_opt          : 96 109
function_definition  : 3 24 28 107
interface_body       : 106 107
interface_definition : 9
match_case           : 64 65
match_cases          : 63 64
namespace_definition : 7
parameter            : 89 90
parameters_list      : 87 89
parameters_opt       : 79 94 95
pattern              : 66 74 75
pattern_list         : 73 74
program              : 1 13 16 48 61 62 62 66 79 81 94 0
qualified_name       : 76 78
return_statement     : 10
return_type_opt      : 79 94 95
simple_pattern       : 67
statement            : 1 2
struct_body          : 25 109
struct_definition    : 5
struct_member        : 25
tuple_pattern        : 68
type_list            : 17 19
type_specifier       : 19 20 37 38 91 92 101 102 103 104 105 105
type_with_generics   : 33 36 94 95 96 106 109 110
use_statement        : 
variable_declaration : 8 23 27 97

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . function_definition
    (4) statement -> . class_definition
    (5) statement -> . struct_definition
    (6) statement -> . enum_definition
    (7) statement -> . namespace_definition
    (8) statement -> . variable_declaration SEMI
    (9) statement -> . interface_definition
    (10) statement -> . return_statement SEMI
    (48) statement -> . FOR ID IN expression RANGE expression LBRACE program RBRACE
    (61) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (62) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (63) statement -> . MATCH LPAREN expression RPAREN LBRACE match_cases RBRACE
    (81) statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (97) statement -> . variable_declaration
    (98) statement -> . ID ASSIGN expression
    (99) statement -> . expression
    (79) function_definition -> . ASYNC FN ID LPAREN parameters_opt RPAREN return_type_opt LBRACE program RBRACE
    (94) function_definition -> . FN type_with_generics LPAREN parameters_opt RPAREN return_type_opt LBRACE program RBRACE
    (95) function_definition -> . FN type_with_generics LPAREN parameters_opt RPAREN return_type_opt LBRACE RBRACE
    (96) class_definition -> . CLASS type_with_generics extends_opt LBRACE class_body RBRACE
    (109) struct_definition -> . CLASS type_with_generics extends_opt LBRACE struct_body RBRACE
    (110) enum_definition -> . ENUM type_with_generics LBRACE enum_body RBRACE
    (13) namespace_definition -> . NAMESPACE ID LBRACE program RBRACE
    (14) namespace_definition -> . NAMESPACE ID LBRACE RBRACE
    (101) variable_declaration -> . type_specifier ID LPAREN arg_list_opt RPAREN SEMI
    (102) variable_declaration -> . type_specifier ID SEMI
    (103) variable_declaration -> . type_specifier ID ASSIGN expression SEMI
    (104) variable_declaration -> . type_specifier ID LBRACE arg_list_opt RBRACE SEMI
    (105) variable_declaration -> . type_specifier ID ASSIGN NEW type_specifier LPAREN arg_list_opt RPAREN SEMI
    (106) interface_definition -> . INTERFACE type_with_generics LBRACE interface_body RBRACE
    (15) return_statement -> . RETURN expression
    (11) expression -> . TRUE
    (12) expression -> . FALSE
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NEQ expression
    (43) expression -> . expression LTHEN expression
    (44) expression -> . expression RTHEN expression
    (45) expression -> . expression LEQ expression
    (46) expression -> . expression GEQ expression
    (47) expression -> . NOT expression
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression TIMES expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . expression MOD expression
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . ID LPAREN arg_list_opt RPAREN
    (80) expression -> . AWAIT expression
    (83) expression -> . NUMBER
    (84) expression -> . ID
    (85) expression -> . REF ID
    (86) expression -> . POINTER expression
    (100) expression -> . error
    (35) type_specifier -> . ID
    (36) type_specifier -> . type_with_generics
    (37) type_specifier -> . POINTER type_specifier
    (38) type_specifier -> . REF type_specifier
    (17) type_with_generics -> . ID LANGLE type_list RANGLE
    (18) type_with_generics -> . ID empty

    FOR             shift and go to state 11
    IF              shift and go to state 14
    MATCH           shift and go to state 16
    WHILE           shift and go to state 17
    ID              shift and go to state 12
    ASYNC           shift and go to state 18
    FN              shift and go to state 19
    CLASS           shift and go to state 21
    ENUM            shift and go to state 22
    NAMESPACE       shift and go to state 23
    INTERFACE       shift and go to state 25
    RETURN          shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    NOT             shift and go to state 29
    LPAREN          shift and go to state 15
    AWAIT           shift and go to state 30
    NUMBER          shift and go to state 31
    REF             shift and go to state 32
    POINTER         shift and go to state 33
    error           shift and go to state 34

    program                        shift and go to state 1
    statement                      shift and go to state 2
    function_definition            shift and go to state 3
    class_definition               shift and go to state 4
    struct_definition              shift and go to state 5
    enum_definition                shift and go to state 6
    namespace_definition           shift and go to state 7
    variable_declaration           shift and go to state 8
    interface_definition           shift and go to state 9
    return_statement               shift and go to state 10
    expression                     shift and go to state 13
    type_with_generics             shift and go to state 20
    type_specifier                 shift and go to state 24

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . function_definition
    (4) statement -> . class_definition
    (5) statement -> . struct_definition
    (6) statement -> . enum_definition
    (7) statement -> . namespace_definition
    (8) statement -> . variable_declaration SEMI
    (9) statement -> . interface_definition
    (10) statement -> . return_statement SEMI
    (48) statement -> . FOR ID IN expression RANGE expression LBRACE program RBRACE
    (61) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (62) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (63) statement -> . MATCH LPAREN expression RPAREN LBRACE match_cases RBRACE
    (81) statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (97) statement -> . variable_declaration
    (98) statement -> . ID ASSIGN expression
    (99) statement -> . expression
    (79) function_definition -> . ASYNC FN ID LPAREN parameters_opt RPAREN return_type_opt LBRACE program RBRACE
    (94) function_definition -> . FN type_with_generics LPAREN parameters_opt RPAREN return_type_opt LBRACE program RBRACE
    (95) function_definition -> . FN type_with_generics LPAREN parameters_opt RPAREN return_type_opt LBRACE RBRACE
    (96) class_definition -> . CLASS type_with_generics extends_opt LBRACE class_body RBRACE
    (109) struct_definition -> . CLASS type_with_generics extends_opt LBRACE struct_body RBRACE
    (110) enum_definition -> . ENUM type_with_generics LBRACE enum_body RBRACE
    (13) namespace_definition -> . NAMESPACE ID LBRACE program RBRACE
    (14) namespace_definition -> . NAMESPACE ID LBRACE RBRACE
    (101) variable_declaration -> . type_specifier ID LPAREN arg_list_opt RPAREN SEMI
    (102) variable_declaration -> . type_specifier ID SEMI
    (103) variable_declaration -> . type_specifier ID ASSIGN expression SEMI
    (104) variable_declaration -> . type_specifier ID LBRACE arg_list_opt RBRACE SEMI
    (105) variable_declaration -> . type_specifier ID ASSIGN NEW type_specifier LPAREN arg_list_opt RPAREN SEMI
    (106) interface_definition -> . INTERFACE type_with_generics LBRACE interface_body RBRACE
    (15) return_statement -> . RETURN expression
    (11) expression -> . TRUE
    (12) expression -> . FALSE
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NEQ expression
    (43) expression -> . expression LTHEN expression
    (44) expression -> . expression RTHEN expression
    (45) expression -> . expression LEQ expression
    (46) expression -> . expression GEQ expression
    (47) expression -> . NOT expression
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression TIMES expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . expression MOD expression
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . ID LPAREN arg_list_opt RPAREN
    (80) expression -> . AWAIT expression
    (83) expression -> . NUMBER
    (84) expression -> . ID
    (85) expression -> . REF ID
    (86) expression -> . POINTER expression
    (100) expression -> . error
    (35) type_specifier -> . ID
    (36) type_specifier -> . type_with_generics
    (37) type_specifier -> . POINTER type_specifier
    (38) type_specifier -> . REF type_specifier
    (17) type_with_generics -> . ID LANGLE type_list RANGLE
    (18) type_with_generics -> . ID empty

    FOR             shift and go to state 11
    IF              shift and go to state 14
    MATCH           shift and go to state 16
    WHILE           shift and go to state 17
    ID              shift and go to state 12
    ASYNC           shift and go to state 18
    FN              shift and go to state 19
    CLASS           shift and go to state 21
    ENUM            shift and go to state 22
    NAMESPACE       shift and go to state 23
    INTERFACE       shift and go to state 25
    RETURN          shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    NOT             shift and go to state 29
    LPAREN          shift and go to state 15
    AWAIT           shift and go to state 30
    NUMBER          shift and go to state 31
    REF             shift and go to state 32
    POINTER         shift and go to state 33
    error           shift and go to state 34

    statement                      shift and go to state 35
    function_definition            shift and go to state 3
    class_definition               shift and go to state 4
    struct_definition              shift and go to state 5
    enum_definition                shift and go to state 6
    namespace_definition           shift and go to state 7
    variable_declaration           shift and go to state 8
    interface_definition           shift and go to state 9
    return_statement               shift and go to state 10
    expression                     shift and go to state 13
    type_with_generics             shift and go to state 20
    type_specifier                 shift and go to state 24

state 2

    (2) program -> statement .

    FOR             reduce using rule 2 (program -> statement .)
    IF              reduce using rule 2 (program -> statement .)
    MATCH           reduce using rule 2 (program -> statement .)
    WHILE           reduce using rule 2 (program -> statement .)
    ID              reduce using rule 2 (program -> statement .)
    ASYNC           reduce using rule 2 (program -> statement .)
    FN              reduce using rule 2 (program -> statement .)
    CLASS           reduce using rule 2 (program -> statement .)
    ENUM            reduce using rule 2 (program -> statement .)
    NAMESPACE       reduce using rule 2 (program -> statement .)
    INTERFACE       reduce using rule 2 (program -> statement .)
    RETURN          reduce using rule 2 (program -> statement .)
    TRUE            reduce using rule 2 (program -> statement .)
    FALSE           reduce using rule 2 (program -> statement .)
    NOT             reduce using rule 2 (program -> statement .)
    LPAREN          reduce using rule 2 (program -> statement .)
    AWAIT           reduce using rule 2 (program -> statement .)
    NUMBER          reduce using rule 2 (program -> statement .)
    REF             reduce using rule 2 (program -> statement .)
    POINTER         reduce using rule 2 (program -> statement .)
    error           reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)
    RBRACE          reduce using rule 2 (program -> statement .)
    SEMI            reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> function_definition .

    FOR             reduce using rule 3 (statement -> function_definition .)
    IF              reduce using rule 3 (statement -> function_definition .)
    MATCH           reduce using rule 3 (statement -> function_definition .)
    WHILE           reduce using rule 3 (statement -> function_definition .)
    ID              reduce using rule 3 (statement -> function_definition .)
    ASYNC           reduce using rule 3 (statement -> function_definition .)
    FN              reduce using rule 3 (statement -> function_definition .)
    CLASS           reduce using rule 3 (statement -> function_definition .)
    ENUM            reduce using rule 3 (statement -> function_definition .)
    NAMESPACE       reduce using rule 3 (statement -> function_definition .)
    INTERFACE       reduce using rule 3 (statement -> function_definition .)
    RETURN          reduce using rule 3 (statement -> function_definition .)
    TRUE            reduce using rule 3 (statement -> function_definition .)
    FALSE           reduce using rule 3 (statement -> function_definition .)
    NOT             reduce using rule 3 (statement -> function_definition .)
    LPAREN          reduce using rule 3 (statement -> function_definition .)
    AWAIT           reduce using rule 3 (statement -> function_definition .)
    NUMBER          reduce using rule 3 (statement -> function_definition .)
    REF             reduce using rule 3 (statement -> function_definition .)
    POINTER         reduce using rule 3 (statement -> function_definition .)
    error           reduce using rule 3 (statement -> function_definition .)
    $end            reduce using rule 3 (statement -> function_definition .)
    RBRACE          reduce using rule 3 (statement -> function_definition .)
    SEMI            reduce using rule 3 (statement -> function_definition .)


state 4

    (4) statement -> class_definition .

    FOR             reduce using rule 4 (statement -> class_definition .)
    IF              reduce using rule 4 (statement -> class_definition .)
    MATCH           reduce using rule 4 (statement -> class_definition .)
    WHILE           reduce using rule 4 (statement -> class_definition .)
    ID              reduce using rule 4 (statement -> class_definition .)
    ASYNC           reduce using rule 4 (statement -> class_definition .)
    FN              reduce using rule 4 (statement -> class_definition .)
    CLASS           reduce using rule 4 (statement -> class_definition .)
    ENUM            reduce using rule 4 (statement -> class_definition .)
    NAMESPACE       reduce using rule 4 (statement -> class_definition .)
    INTERFACE       reduce using rule 4 (statement -> class_definition .)
    RETURN          reduce using rule 4 (statement -> class_definition .)
    TRUE            reduce using rule 4 (statement -> class_definition .)
    FALSE           reduce using rule 4 (statement -> class_definition .)
    NOT             reduce using rule 4 (statement -> class_definition .)
    LPAREN          reduce using rule 4 (statement -> class_definition .)
    AWAIT           reduce using rule 4 (statement -> class_definition .)
    NUMBER          reduce using rule 4 (statement -> class_definition .)
    REF             reduce using rule 4 (statement -> class_definition .)
    POINTER         reduce using rule 4 (statement -> class_definition .)
    error           reduce using rule 4 (statement -> class_definition .)
    $end            reduce using rule 4 (statement -> class_definition .)
    RBRACE          reduce using rule 4 (statement -> class_definition .)
    SEMI            reduce using rule 4 (statement -> class_definition .)


state 5

    (5) statement -> struct_definition .

    FOR             reduce using rule 5 (statement -> struct_definition .)
    IF              reduce using rule 5 (statement -> struct_definition .)
    MATCH           reduce using rule 5 (statement -> struct_definition .)
    WHILE           reduce using rule 5 (statement -> struct_definition .)
    ID              reduce using rule 5 (statement -> struct_definition .)
    ASYNC           reduce using rule 5 (statement -> struct_definition .)
    FN              reduce using rule 5 (statement -> struct_definition .)
    CLASS           reduce using rule 5 (statement -> struct_definition .)
    ENUM            reduce using rule 5 (statement -> struct_definition .)
    NAMESPACE       reduce using rule 5 (statement -> struct_definition .)
    INTERFACE       reduce using rule 5 (statement -> struct_definition .)
    RETURN          reduce using rule 5 (statement -> struct_definition .)
    TRUE            reduce using rule 5 (statement -> struct_definition .)
    FALSE           reduce using rule 5 (statement -> struct_definition .)
    NOT             reduce using rule 5 (statement -> struct_definition .)
    LPAREN          reduce using rule 5 (statement -> struct_definition .)
    AWAIT           reduce using rule 5 (statement -> struct_definition .)
    NUMBER          reduce using rule 5 (statement -> struct_definition .)
    REF             reduce using rule 5 (statement -> struct_definition .)
    POINTER         reduce using rule 5 (statement -> struct_definition .)
    error           reduce using rule 5 (statement -> struct_definition .)
    $end            reduce using rule 5 (statement -> struct_definition .)
    RBRACE          reduce using rule 5 (statement -> struct_definition .)
    SEMI            reduce using rule 5 (statement -> struct_definition .)


state 6

    (6) statement -> enum_definition .

    FOR             reduce using rule 6 (statement -> enum_definition .)
    IF              reduce using rule 6 (statement -> enum_definition .)
    MATCH           reduce using rule 6 (statement -> enum_definition .)
    WHILE           reduce using rule 6 (statement -> enum_definition .)
    ID              reduce using rule 6 (statement -> enum_definition .)
    ASYNC           reduce using rule 6 (statement -> enum_definition .)
    FN              reduce using rule 6 (statement -> enum_definition .)
    CLASS           reduce using rule 6 (statement -> enum_definition .)
    ENUM            reduce using rule 6 (statement -> enum_definition .)
    NAMESPACE       reduce using rule 6 (statement -> enum_definition .)
    INTERFACE       reduce using rule 6 (statement -> enum_definition .)
    RETURN          reduce using rule 6 (statement -> enum_definition .)
    TRUE            reduce using rule 6 (statement -> enum_definition .)
    FALSE           reduce using rule 6 (statement -> enum_definition .)
    NOT             reduce using rule 6 (statement -> enum_definition .)
    LPAREN          reduce using rule 6 (statement -> enum_definition .)
    AWAIT           reduce using rule 6 (statement -> enum_definition .)
    NUMBER          reduce using rule 6 (statement -> enum_definition .)
    REF             reduce using rule 6 (statement -> enum_definition .)
    POINTER         reduce using rule 6 (statement -> enum_definition .)
    error           reduce using rule 6 (statement -> enum_definition .)
    $end            reduce using rule 6 (statement -> enum_definition .)
    RBRACE          reduce using rule 6 (statement -> enum_definition .)
    SEMI            reduce using rule 6 (statement -> enum_definition .)


state 7

    (7) statement -> namespace_definition .

    FOR             reduce using rule 7 (statement -> namespace_definition .)
    IF              reduce using rule 7 (statement -> namespace_definition .)
    MATCH           reduce using rule 7 (statement -> namespace_definition .)
    WHILE           reduce using rule 7 (statement -> namespace_definition .)
    ID              reduce using rule 7 (statement -> namespace_definition .)
    ASYNC           reduce using rule 7 (statement -> namespace_definition .)
    FN              reduce using rule 7 (statement -> namespace_definition .)
    CLASS           reduce using rule 7 (statement -> namespace_definition .)
    ENUM            reduce using rule 7 (statement -> namespace_definition .)
    NAMESPACE       reduce using rule 7 (statement -> namespace_definition .)
    INTERFACE       reduce using rule 7 (statement -> namespace_definition .)
    RETURN          reduce using rule 7 (statement -> namespace_definition .)
    TRUE            reduce using rule 7 (statement -> namespace_definition .)
    FALSE           reduce using rule 7 (statement -> namespace_definition .)
    NOT             reduce using rule 7 (statement -> namespace_definition .)
    LPAREN          reduce using rule 7 (statement -> namespace_definition .)
    AWAIT           reduce using rule 7 (statement -> namespace_definition .)
    NUMBER          reduce using rule 7 (statement -> namespace_definition .)
    REF             reduce using rule 7 (statement -> namespace_definition .)
    POINTER         reduce using rule 7 (statement -> namespace_definition .)
    error           reduce using rule 7 (statement -> namespace_definition .)
    $end            reduce using rule 7 (statement -> namespace_definition .)
    RBRACE          reduce using rule 7 (statement -> namespace_definition .)
    SEMI            reduce using rule 7 (statement -> namespace_definition .)


state 8

    (8) statement -> variable_declaration . SEMI
    (97) statement -> variable_declaration .

  ! shift/reduce conflict for SEMI resolved as shift
    SEMI            shift and go to state 36
    FOR             reduce using rule 97 (statement -> variable_declaration .)
    IF              reduce using rule 97 (statement -> variable_declaration .)
    MATCH           reduce using rule 97 (statement -> variable_declaration .)
    WHILE           reduce using rule 97 (statement -> variable_declaration .)
    ID              reduce using rule 97 (statement -> variable_declaration .)
    ASYNC           reduce using rule 97 (statement -> variable_declaration .)
    FN              reduce using rule 97 (statement -> variable_declaration .)
    CLASS           reduce using rule 97 (statement -> variable_declaration .)
    ENUM            reduce using rule 97 (statement -> variable_declaration .)
    NAMESPACE       reduce using rule 97 (statement -> variable_declaration .)
    INTERFACE       reduce using rule 97 (statement -> variable_declaration .)
    RETURN          reduce using rule 97 (statement -> variable_declaration .)
    TRUE            reduce using rule 97 (statement -> variable_declaration .)
    FALSE           reduce using rule 97 (statement -> variable_declaration .)
    NOT             reduce using rule 97 (statement -> variable_declaration .)
    LPAREN          reduce using rule 97 (statement -> variable_declaration .)
    AWAIT           reduce using rule 97 (statement -> variable_declaration .)
    NUMBER          reduce using rule 97 (statement -> variable_declaration .)
    REF             reduce using rule 97 (statement -> variable_declaration .)
    POINTER         reduce using rule 97 (statement -> variable_declaration .)
    error           reduce using rule 97 (statement -> variable_declaration .)
    $end            reduce using rule 97 (statement -> variable_declaration .)
    RBRACE          reduce using rule 97 (statement -> variable_declaration .)

  ! SEMI            [ reduce using rule 97 (statement -> variable_declaration .) ]


state 9

    (9) statement -> interface_definition .

    FOR             reduce using rule 9 (statement -> interface_definition .)
    IF              reduce using rule 9 (statement -> interface_definition .)
    MATCH           reduce using rule 9 (statement -> interface_definition .)
    WHILE           reduce using rule 9 (statement -> interface_definition .)
    ID              reduce using rule 9 (statement -> interface_definition .)
    ASYNC           reduce using rule 9 (statement -> interface_definition .)
    FN              reduce using rule 9 (statement -> interface_definition .)
    CLASS           reduce using rule 9 (statement -> interface_definition .)
    ENUM            reduce using rule 9 (statement -> interface_definition .)
    NAMESPACE       reduce using rule 9 (statement -> interface_definition .)
    INTERFACE       reduce using rule 9 (statement -> interface_definition .)
    RETURN          reduce using rule 9 (statement -> interface_definition .)
    TRUE            reduce using rule 9 (statement -> interface_definition .)
    FALSE           reduce using rule 9 (statement -> interface_definition .)
    NOT             reduce using rule 9 (statement -> interface_definition .)
    LPAREN          reduce using rule 9 (statement -> interface_definition .)
    AWAIT           reduce using rule 9 (statement -> interface_definition .)
    NUMBER          reduce using rule 9 (statement -> interface_definition .)
    REF             reduce using rule 9 (statement -> interface_definition .)
    POINTER         reduce using rule 9 (statement -> interface_definition .)
    error           reduce using rule 9 (statement -> interface_definition .)
    $end            reduce using rule 9 (statement -> interface_definition .)
    RBRACE          reduce using rule 9 (statement -> interface_definition .)
    SEMI            reduce using rule 9 (statement -> interface_definition .)


state 10

    (10) statement -> return_statement . SEMI

    SEMI            shift and go to state 37


state 11

    (48) statement -> FOR . ID IN expression RANGE expression LBRACE program RBRACE

    ID              shift and go to state 38


state 12

    (98) statement -> ID . ASSIGN expression
    (55) expression -> ID . LPAREN arg_list_opt RPAREN
    (84) expression -> ID .
    (35) type_specifier -> ID .
    (17) type_with_generics -> ID . LANGLE type_list RANGLE
    (18) type_with_generics -> ID . empty
    (82) empty -> .
